# mlp-playground

./: .gitignore  conda.yaml  install_cuda.sh  pylintrc  pyproject.toml  requirements.txt  requirements_cuda.txt  to_db.sh
notebooks/: equinox.ipynb  mha.ipynb  notebooks_path.py  sim_clr.ipynb  sim_clr.py  test.ipynb  vit.ipynb
playground/: settings.py
playground/mha/: dataloader.py  mha_test.py  model.py  run.py  train.py
playground/pixel_cnn/: receptive_field.ipynb  receptive_field.py
playground/pixel_cnn/pixel_cnn/: data.py  model.py  run.py  train.py  utils.py  visualize.py
playground/pixel_cnn/tests/: test_pixel_cnn.py
playground/sim_clr/: constants.py  data_prep.py  model.py  trainer.py  utils.py
playground/vit/: dataloader.py  model.py  train.py  util.py
