[tool.poetry]
name = "does-nlp"
version = "0.1.0"
description = ""
authors = ["Ashutosh Dwivedi <aashu.dwivedi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.3.0"

[tool.poetry.dev-dependencies]
ipython = "^7.24.1"
typer = "^0.3.2"
jupyterlab = "^3.0.16"
jupytext = "^1.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
